--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,24 @@
 * {
   scroll-behavior: smooth; }
 
+.info-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 350px;
+  background: hsla(0,0%,100%,.8);
+  z-index: 1;
+}
+
+.info-container #info {
+  padding: 15px;
+  height: 100%;
+  overflow: scroll;
+  line-height: 24px;
+  white-space: pre-line;
+}
+
 body {
   margin: 0;
   display: flex;
