--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,27 @@
 * {
   scroll-behavior: smooth; }
 
+.absolute {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+
 .info-container {
   position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
   width: 350px;
-  background: hsla(0,0%,100%,.8);
-  z-index: 1;
-}
-
-.info-container #info {
-  padding: 15px;
-  height: 100%;
-  overflow: scroll;
-  line-height: 24px;
-  white-space: pre-line;
-}
+  background: rgba(255, 255, 255, 0.8);
+  z-index: 1; }
+  .info-container .info-container #info {
+    padding: 15px;
+    height: 100%;
+    overflow: scroll;
+    line-height: 24px;
+    white-space: pre-line; }
 
 body {
   margin: 0;
@@ -85,3 +89,29 @@ section {
   .main-content section.map #map {
     width: 100%;
     height: 100vh; }
+  .main-content section.team .content {
+    display: flex;
+    flex-wrap: wrap; }
+  .main-content section.team .team-member {
+    width: 20%;
+    text-align: center; }
+    .main-content section.team .team-member .inner {
+      padding: 20px; }
+      .main-content section.team .team-member .inner img {
+        width: 185px;
+        height: 185px;
+        display: block;
+        object-fit: cover;
+        margin: 0 auto 30px auto; }
+      .main-content section.team .team-member .inner p {
+        margin-bottom: 15px;
+        min-height: 36px; }
+        .main-content section.team .team-member .inner p.name {
+          font-weight: bold; }
+      .main-content section.team .team-member .inner .linkedIn {
+        position: relative; }
+        .main-content section.team .team-member .inner .linkedIn path {
+          fill: #0a66c2; }
+    @media screen and (max-width: 1400px) {
+      .main-content section.team .team-member {
+        width: 33%; } }
