--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2,6 +2,13 @@
   scroll-behavior: smooth;
 }
 
+.absolute {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 
 .info-container {
   position: fixed;
@@ -119,6 +126,51 @@ section {
     #map {
       width: 100%;
       height: 100vh;
+    }
+  }
+
+  section.team {
+    .content {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    
+    .team-member {
+      width: 20%;
+      text-align: center;
+
+      .inner {
+        padding: 20px;
+
+        img {
+          width: 185px;
+          height: 185px;
+          display: block;
+          object-fit: cover;
+          margin: 0 auto 30px auto;
+        }
+
+        p {
+          margin-bottom: 15px;
+          min-height: 36px;
+
+          &.name {
+            font-weight: bold;
+          }
+        }
+
+        .linkedIn {
+          position: relative;
+
+          path {
+            fill: #0a66c2;
+          }
+        }
+      }
+      
+      @media screen and (max-width: 1400px) {
+        width: 33%;
+      }
     }
   }
 }
